# blinders

./: .env.example  .eslintrc.js  .gitignore  Dockerfile.build-pylambda  Makefile  README.md  build.config.json  go.work  go.work.sum  package.json  pyproject.toml
.github/workflows/: golangci-lint.yml  pythonci-lint.yml
cli/: blinders.go  deploy.js  go.mod  go.sum  index.js  package.json
cli/commands/: auth.go  build.go  deploy.go  utils.go
docs/: flashcard_collection.md  smart_deploy.md
functions/authenticate/: go.mod  main.go
functions/chat/: go.mod  go.sum
functions/collecting/: go.mod  go.sum  main.go
functions/collecting/get/: main.go
functions/collecting/push/: main.go
functions/embedder/: go.mod  main.go
functions/embedder/core/: core_test.go  (+1 more)
functions/explore/: go.mod  go.sum  main.go
functions/gosuggest/: go.mod  go.sum  init.go  main.go
functions/practice/: main.go
functions/rest/: main.go
functions/suggest/: pyproject.toml
functions/suggest/blinders/suggest_lambda/: __init__.py
functions/suggestion/: main.go
functions/translate/: main.go
functions/websocket/: go.mod  go.sum
infra/: api-gateway.tf  backend.conf.example  common.sh  ec2.ansible.yml  ec2.tf  ec2_mongodb.ansible.yml  ec2_mongodb.ubuntu.ansible.yml  ec2_redis_stack.ansible.yml  ec2_redis_stack.ubuntu.ansible.yml  lambda.tf  route.tf
infra/ansible/: ec2_redis_stack.ubuntu.ansible.yml
infra/core/: api-gateways.tf  domains.tf  iam.tf  lambda-functions.tf  lambdas.tf  main.tf  routes.tf  variables.tf  wslambda.tf
infra/deprecated/: gateway.tf  lambda.tf  provider.tf  route.tf  variables.tf
infra/dev/: .terraform.lock.hcl  main.tf  variables.tf
infra/prod/: .terraform.lock.hcl  ec2-instances.tf  main.tf  variables.tf
infra/shared/: .terraform.lock.hcl  ec2-instances.tf  main.tf  variables.tf
infra/staging/: main.tf
infra/templates/: mongod.conf  mongod.ubuntu.conf  redis-stack-server.service  redis-stack.conf
infra/trydev/: .terraform.lock.hcl  main.tf
pypackages/embedder/: pyproject.toml
pypackages/pytransport/: pyproject.toml
pyservices/dictionary/: pyproject.toml
pyservices/embedder/: pyproject.toml
pyservices/suggest/: pyproject.toml
scripts/: build_all.sh  build_golambda.sh  build_golambdas.sh  build_gosingle.sh  build_pylambda.sh  build_pysuggest.sh  check_go_mod_changes.sh  check_pylint.sh  go_mod_tidy_all.sh  lookup_lambdas.sh
server/: go.mod  go.sum  main.go  service.go
services/auth/: go.mod  main.go
services/chat/: go.mod  go.sum  main.go
services/collecting/: go.mod  go.sum  main.go  manager.go
services/embedder/: go.mod  go.sum  main.go  pyproject.toml
services/embedder/blinders/embedder_service/: __init__.py  api.py
services/embedder/core/: core_test.go  helper.go
services/embedder/lambda/: main.go
services/explore/: go.mod  go.sum  main.go  pyproject.toml
services/goembedder/: go.mod  go.sum  main.go
services/onboarding/: go.mod
services/practice/: flashcards.go  go.mod  go.sum  main.go  middlewares.go
services/rest/: go.mod  go.sum  main.go
services/suggest/: go.mod  go.sum  main.go  prompts.go  types.go  utils.go
services/translate/: go.mod  go.sum
services/users/: go.mod  go.sum  main.go  middleware.go  middlewares.go  users.go
services/websocket/: go.mod  go.sum
tools/: .air.toml
(+93 files in other folders)
