[tool.poetry]
name = "blinders-suggest-lambda"
version = "0.1.0"
description = ""
authors = ["Tan Le <tanlethanh8266@gmail.com>"]
readme = "README.md"
packages = [{ include = "blinders" }]

[tool.poetry.dependencies]
orjson = "^3.10.0"
python = "^3.10"
blinders-pysuggest-core = { path = "../../packages/pysuggest", develop = true }
blinders-pytransport-core = { path = "../../packages/pytransport", develop = true }
blinders-pydb-core = { path = "../../packages/pydb", develop = true }

[tool.poetry.dev-dependencies]
botocore = "^1.34.95"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
