[tool.poetry]
name = "blinders-embedder-core"
version = "0.1.0"
description = ""
authors = ["Tan Le <tanlethanh8266@gmail.com>"]
readme = "README.md"
packages = [{ include = "blinders" }]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
